--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-qr-code": "^2.0.18",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.21.0",
-    "wagmi": "^2.12.0"
+    "wagmi": "^2.12.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
