--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
+    "i18next": "^25.8.6",
     "lucide-react": "^0.552.0",
     "next": "^16.1.5",
+    "next-i18next": "^15.4.3",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.5.4",
     "react-qr-code": "^2.0.18",
     "tailwind-merge": "^3.3.1",
     "viem": "^2.21.0",
